GearsetPOC/force-app/main/default/objects/Voucher_Booking__c/Voucher_Booking__c.object-meta.xml
<CustomObject>
    <label>Voucher Booking</label>
    <nameField>
        <displayFormat>VB-{000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voucher Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>