GearsetPOC/force-app/main/default/objects/Voucher_Booking__c/fields/Pass_Number__c.field-meta.xml
<CustomField>
    <fullName>Pass_Number__c</fullName>
    <label>Pass Number / STAN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>