GearsetPOC/force-app/main/default/objects/Voucher_Booking__c/fields/Staff_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Staff_Member_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Member Name</label>
    <referenceTo>Voucher_Database__c</referenceTo>
    <relationshipLabel>Voucher Bookings</relationshipLabel>
    <relationshipName>Overseas_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>