GearsetPOC/force-app/main/default/objects/Voucher_Booking__c/fields/Staff_Name__c.field-meta.xml
<CustomField>
    <fullName>Staff_Name__c</fullName>
    <formula>Staff_Member_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Name</label>
    <type>Text</type>
</CustomField>