GearsetPOC/force-app/main/default/objects/Voucher_Booking__c/fields/Voucher_Value__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Value__c</fullName>
    <label>Voucher Value</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>