GearsetPOC/force-app/main/default/objects/Voucher_Booking__c/validationRules/Archived_Member_of_Staff.validationRule-meta.xml
<ValidationRule>
    <fullName>Archived_Member_of_Staff</fullName>
    <active>true</active>
    <description>bookings cannot be made for employees who have been archived</description>
    <errorConditionFormula>ISPICKVAL(Staff_Member_Name__r.Type_of_Staff__c ,&quot;Archive&quot;)</errorConditionFormula>
    <errorMessage>Bookings cannot be made for Archived members of staff</errorMessage>
</ValidationRule>