GearsetPOC/force-app/main/default/objects/Voucher_Booking__c/validationRules/Pass_Number_Matches_Pass_Number_on_File.validationRule-meta.xml
<ValidationRule>
    <fullName>Pass_Number_Matches_Pass_Number_on_File</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL( Staff_Member_Name__r.Type_of_Staff__c,&quot;Eurostar Board Members&quot;))
&amp;&amp;
NOT(ISBLANK(Staff_Member_Name__r.Pass__c))
&amp;&amp; 
NOT(Pass_Number__c =  Staff_Member_Name__r.Pass__c)</errorConditionFormula>
    <errorMessage>Pass number does not match the pass number we have on file (Enter numbers only)</errorMessage>
</ValidationRule>