GearsetPOC/force-app/main/default/objects/Voucher_Booking__c/validationRules/Voucher_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Voucher_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>(Staff_Member_Name__r.Vouchers_Remaining__c -  Vouchers_Used__c ) &lt; 0</errorConditionFormula>
    <errorMessage>Too many vouchers being used</errorMessage>
</ValidationRule>