GearsetPOC/force-app/main/default/objects/Voucher_Booking__c/listViews/All_Voucher_Bookings.listView-meta.xml
<ListView>
    <fullName>All_Voucher_Bookings</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Voucher Bookings</label>
    <language>en_US</language>
</ListView>